tests/ui/diagnostic_namespace/on_type_error/on_type_error_with_too_many_generics.stderr
warning: `#[diagnostic::on_type_error]` only supports one ADT generic parameter, but found `2`
  --> $DIR/on_type_error_with_too_many_generics.rs:4:15
   |
LL | struct TooMany<T, U>(T, U);
   |               ^^^^^^
   |
   = note: `#[warn(on_type_error_multiple_generics)]` on by default

error[E0308]: mismatched types
  --> $DIR/on_type_error_with_too_many_generics.rs:8:44
   |
LL |     let _: TooMany<i32, i32> = TooMany(32, "test");
   |                                -------     ^^^^^^ expected `i32`, found `&str`
   |                                |
   |                                arguments to this struct are incorrect
   |
help: the type constructed contains `&'static str` due to the type of the argument passed
  --> $DIR/on_type_error_with_too_many_generics.rs:8:32
   |
LL |     let _: TooMany<i32, i32> = TooMany(32, "test");
   |                                ^^^^^^^^^^^^------^
   |                                            |
   |                                            this argument influences the type of `TooMany`
note: tuple struct defined here
  --> $DIR/on_type_error_with_too_many_generics.rs:4:8
   |
LL | struct TooMany<T, U>(T, U);
   |        ^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
